crates/lowerer/tests/snapshots/upstream_parser_policy__policy_annotations_bad_id_3_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: invalid annotation name
  ╭▸ policy_annotations_bad_id_3:1:2
  │
1 │ @hi+mom("this should be invalid")
  ╰╴ ━━━━━━ must be a valid identifier
