crates/lowerer/tests/snapshots/upstream_parser_policy__policy_annotations_bad_id_3_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies 0..72
├─Policy 0..3
│ └─Annotation 0..3
│   ├─At "@" 0..1
│   └─Identifier "hi" 1..3
└─Policy 3..72
  ├─Error 3..34
  │ ├─Add "+" 3..4
  │ ├─Identifier "mom" 4..7
  │ ├─OpenParenthesis "(" 7..8
  │ ├─String "\"this should be invalid\"" 8..32
  │ ├─CloseParenthesis ")" 32..33
  │ └─Whitespace "\n" 33..34
  ├─PermitKeyword "permit" 34..40
  ├─Whitespace " " 40..41
  ├─OpenParenthesis "(" 41..42
  ├─VariableDefinition 42..51
  │ └─PrincipalKeyword "principal" 42..51
  ├─Comma "," 51..52
  ├─Whitespace " " 52..53
  ├─VariableDefinition 53..59
  │ └─ActionKeyword "action" 53..59
  ├─Comma "," 59..60
  ├─Whitespace " " 60..61
  ├─VariableDefinition 61..69
  │ └─ResourceKeyword "resource" 61..69
  ├─CloseParenthesis ")" 69..70
  ├─Semicolon ";" 70..71
  └─Whitespace "\n" 71..72
