crates/lowerer/tests/snapshots/upstream_parser_policy__policy_annotations_bad_val_1.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: root
---
policies 0..75
╰─ policy 0..75
   ├─ annotation 0..37
   │  ├─ @ 0..1
   │  ├─ identifier 1..15
   │  ├─ ( 15..16
   │  ├─ string 16..21
   │  ├─ error 21..35
   │  │  ├─ , 21..22
   │  │  ├─ whitespace 22..23
   │  │  ╰─ string 23..35
   │  ├─ ) 35..36
   │  ╰─ whitespace 36..37
   ├─ permit 37..43
   ├─ whitespace 43..44
   ├─ scope 44..73
   │  ├─ ( 44..45
   │  ├─ variable definition 45..54
   │  │  ╰─ principal 45..54
   │  ├─ , 54..55
   │  ├─ whitespace 55..56
   │  ├─ variable definition 56..62
   │  │  ╰─ action 56..62
   │  ├─ , 62..63
   │  ├─ whitespace 63..64
   │  ├─ variable definition 64..72
   │  │  ╰─ resource 64..72
   │  ╰─ ) 72..73
   ├─ ; 73..74
   ╰─ whitespace 74..75
