crates/lowerer/tests/snapshots/upstream_parser_policy__policy_annotations_bad_val_1_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies 0..75
├─Policy 0..21
│ ├─Annotation 0..21
│ │ ├─At "@" 0..1
│ │ ├─Name 1..15
│ │ │ └─Identifier "bad_annotation" 1..15
│ │ ├─OpenParenthesis "(" 15..16
│ │ ├─String "\"bad\"" 16..21
│ │ └─CloseParenthesis "" 21..21
│ └─Semicolon "" 21..21
└─Policy 21..75
  ├─Error 21..37
  │ ├─Comma "," 21..22
  │ ├─Whitespace " " 22..23
  │ ├─String "\"annotation\"" 23..35
  │ ├─CloseParenthesis ")" 35..36
  │ └─Newline "\n" 36..37
  ├─PermitKeyword "permit" 37..43
  ├─Whitespace " " 43..44
  ├─OpenParenthesis "(" 44..45
  ├─VariableDefinition 45..54
  │ └─PrincipalKeyword "principal" 45..54
  ├─Comma "," 54..55
  ├─Whitespace " " 55..56
  ├─VariableDefinition 56..62
  │ └─ActionKeyword "action" 56..62
  ├─Comma "," 62..63
  ├─Whitespace " " 63..64
  ├─VariableDefinition 64..72
  │ └─ResourceKeyword "resource" 64..72
  ├─CloseParenthesis ")" 72..73
  ├─Semicolon ";" 73..74
  └─Newline "\n" 74..75
