crates/lowerer/tests/snapshots/upstream_parser_policy__policy_annotations_bad_val_2.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected a string literal
  ╭▸ test:1:17
  │
1 │ @bad_annotation()
  ╰╴                ━ expected a string literal
